--- a/Web Development/MovieManagement/MovieManagement/appsettings.json
+++ b/Web Development/MovieManagement/MovieManagement/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "devconnection": "Server=(localdb)\\mssqllocaldb;Database=MovieDb;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
