--- a/Web Development/MovieManagement/MovieManagement.Api/appsettings.json
+++ b/Web Development/MovieManagement/MovieManagement.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieManagementApiContext": "Server=(localdb)\\mssqllocaldb;Database=MovieManagement.Api.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"MovieManagementApiContext": "Server=(localdb)\\mssqllocaldb;Database=MovieManagement.Api.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MovieManagementApiContext": "Data Source=MovieManagement.Api.Data.db"
   }
 }
