--- a/Web Development/MovieManagement/MovieManagement/appsettings.json
+++ b/Web Development/MovieManagement/MovieManagement/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "devconnection": "Server=(localdb)\\mssqllocaldb;Database=MovieDb;Trusted_Connection=True"
+    "devconnection": "Server=(localdb)\\mssqllocaldb;Database=MovieDb;Trusted_Connection=True",
+    "devconnection1": "Server=(localdb)\\mssqllocaldb;Database=MovieDb;User Id=appuser1;password=abc123;"
   },
   "Logging": {
     "LogLevel": {
